--- a/promo-shock/.env.example
+++ b/promo-shock/.env.example
@@ -2,3 +2,7 @@ NEXT_PUBLIC_API_URL="url"
 NEXT_PUBLIC_WC_PROJECT_ID="url"
 NEXT_PUBLIC_BSC_CHAIN_ID="56|97"
 NEXT_PUBLIC_BSC_RPC_URL="url"
+NEXT_PUBLIC_BSC_TICKET_FACTORY_ADDRESS="0x0"
+NEXT_PUBLIC_BSC_PROMO_FACTORY_ADDRESS="0x0"
+NEXT_PUCLIC_ETHERSCAN_API_KEY="key"
+
