feat: codegen for contracts

--- a/promo-shock/tsconfig.json
+++ b/promo-shock/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@promo-shock/*": ["./src/*"],
-      "@public/*": ["./public/*"]
+      "@public/*": ["./public/*"],
+      "@generated/*": ["./generated/*"]
     }
   },
   "include": [
