--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:wagmi": "wagmi generate --config ./wagmi.config.ts"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
     "@rainbow-me/rainbowkit": "^2.0.0",
-    "@tanstack/react-query": "^5.20.1",
+    "@tanstack/react-query": "^5.14.6",
     "antd": "^5.14.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
@@ -19,9 +20,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-hook-form": "^7.50.1",
     "the-new-css-reset": "^1.11.2",
     "viem": "^2.7.8",
     "wagmi": "^2.5.6",
+    "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
+    "@wagmi/cli": "^2.1.1",
     "autoprefixer": "^10.0.1",
     "encoding": "^0.1.13",
     "eslint": "^8",
@@ -39,6 +43,7 @@
     "pino-pretty": "^10.3.1",
     "postcss": "^8",
     "prettier": "3.0.3",
+    "rapini": "^3.5.0",
     "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
