--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,12 +1,13 @@
 version: "3"
 
 services:
-  backend: 
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
-    depends_on: 
+    depends_on:
       - postgres
+    restart: always
     environment:
       - DB_HOST=postgres
       - DB_PASSWORD=pass
