feat: new stream form

--- a/promo-shock/.env.example
+++ b/promo-shock/.env.example
@@ -5,4 +5,5 @@ NEXT_PUBLIC_BSC_RPC_URL="url"
 NEXT_PUBLIC_BSC_TICKET_FACTORY_ADDRESS="0x0"
 NEXT_PUBLIC_BSC_PROMO_FACTORY_ADDRESS="0x0"
 NEXT_PUCLIC_ETHERSCAN_API_KEY="key"
+NEXT_PUBLIC_METADATA_EXTERNAL_LINK="url"
 
