--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@helia/dag-json": "^3.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.14.6",
     "antd": "^5.14.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "helia": "^4.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
