--- a/promo-shock/tsconfig.json
+++ b/promo-shock/tsconfig.json
@@ -30,7 +30,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".env.d.ts",
-    "src/ui-kit/input/file-input"
+    "src/ui-kit/input/file-input",
+    "src/ui-kit/uploaders/index.tsx"
   ],
   "exclude": ["node_modules"]
 }
