--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - DB_HOST=postgres
       - DB_PASSWORD=pass
       - TICKET_FACTORY_ADDR=0x42C593A0F50321EA473b5fAe6a4b76c212a26F54
+      - PROMO_FACTORY_ADDR=0x3d3E2D37151a812418FB075190f959a6C90C3A38
     volumes:
       - ./:/code
       - ../contracts/abi:/contracts/abi
