Small fixes for deployemnt

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,6 @@ RUN pip install -r /tmp/requirements.txt
 
 
 RUN mkdir -p /code
-COPY *.py /code/
+COPY ./ /code/
 WORKDIR /code
 CMD uvicorn server.fast_api:app --reload --port 80 --host 0.0.0.0 --log-config log_conf.yaml
