--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,8 @@
 aiohttp==3.9.3; python_version >= '3.8'
 aiosignal==1.3.1; python_version >= '3.7'
 annotated-types==0.6.0; python_version >= '3.8'
-anyio==4.2.0; python_version >= '3.8'
-async-timeout==4.0.3; python_version < '3.11'
+anyio==4.3.0; python_version >= '3.8'
+asyncio==3.4.3
 attrs==23.2.0; python_version >= '3.7'
 bitarray==2.9.2
 black==24.2.0; python_version >= '3.8'
@@ -19,9 +19,9 @@ eth-keys==0.5.0; python_version >= '3.8' and python_version < '4'
 eth-rlp==1.0.1; python_version >= '3.8' and python_version < '4'
 eth-typing==4.0.0; python_version >= '3.8' and python_version < '4'
 eth-utils==3.0.0; python_version >= '3.8' and python_version < '4'
-exceptiongroup==1.2.0; python_version < '3.11'
 fastapi==0.109.2; python_version >= '3.8'
 frozenlist==1.4.1; python_version >= '3.8'
+greenlet==3.0.3; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 h11==0.14.0; python_version >= '3.7'
 hexbytes==0.3.1; python_version >= '3.7' and python_version < '4'
 idna==3.6; python_version >= '3.5'
@@ -36,13 +36,13 @@ parsimonious==0.9.0
 pathspec==0.12.1; python_version >= '3.8'
 platformdirs==4.2.0; python_version >= '3.8'
 pluggy==1.4.0; python_version >= '3.8'
-protobuf==4.25.2; python_version >= '3.8'
+protobuf==4.25.3; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
 pycryptodome==3.20.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pydantic==2.6.1; python_version >= '3.8'
 pydantic-core==2.16.2; python_version >= '3.8'
 pymemcache==4.0.0; python_version >= '3.7'
-pytest==8.0.0; python_version >= '3.8'
+pytest==8.0.1; python_version >= '3.8'
 pyunormalize==15.1.0; python_version >= '3.6'
 pyyaml==6.0.1; python_version >= '3.6'
 referencing==0.33.0; python_version >= '3.8'
@@ -53,10 +53,9 @@ rpds-py==0.18.0; python_version >= '3.8'
 sniffio==1.3.0; python_version >= '3.7'
 sqlalchemy==2.0.27; python_version >= '3.7'
 starlette==0.36.3; python_version >= '3.8'
-tomli==2.0.1; python_version < '3.11'
 toolz==0.12.1; python_version >= '3.7'
 typing-extensions==4.9.0; python_version >= '3.8'
-urllib3==2.2.0; python_version >= '3.8'
+urllib3==2.2.1; python_version >= '3.8'
 uvicorn==0.27.1; python_version >= '3.8'
 web3==6.15.1; python_full_version >= '3.7.2'
 websockets==12.0; python_version >= '3.8'
