--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -6,25 +6,25 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: kelizarov/promoshock-api:latest
+  IMAGE_NAME: ${{ github.actor }}/promoshock-api:latest
 
 jobs:
-  build:
-    name: build-image
+  publish:
+    name: publish image
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
     - name: Login
       run: |
-        echo ${{ secrets.PAT }} | docker login ${{ env.REGISTRY }} -u kelizarov --password-stdin
+        echo ${{ secrets.PAT }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
     - name: Build and Publish
       run: |
         docker build backend --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         docker push ${{ env.REGISTRY }}/${{ env.IAMGE_NAME }}
 
   deploy:
-    needs: build
+    needs: publish
     name: deploy image
     runs-on: ubuntu-latest
 
