--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -10,31 +10,20 @@ env:
 
 jobs:
   publish:
-    name: publish image
+    name: build and upload image
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Login
-      run: |
-        echo ${{ secrets.PAT }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
-    - name: Build and Publish
-      run: |
-        docker build backend --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        docker push ${{ env.REGISTRY }}/${{ env.IAMGE_NAME }}
-
-  deploy:
-    needs: publish
-    name: deploy image
-    runs-on: ubuntu-latest
-
-    steps:
     - name: install ssh keys
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_ed25519
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-    - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORKDIR }}" && docker compose pull && docker compose up -d && exit"
+    - name: Build and Publish
+      run: |
+        docker build backend --tag ${{ env.IMAGE_NAME }}
+        docker save ${{ env.IAMGE_NAME }} | ssh -C ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker load && cd ${{ env.WORKDIR }} && docker compose -d && exit" 
     - name: cleanup
       run: rm -rf ~/.ssh
+
