--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/promoshockapi:latest
+  IMAGE_NAME: ${{ github.actor }}/promoshockapi:$GITHUB_SHA
 
 jobs:
   publish:
@@ -23,7 +23,7 @@ jobs:
     - name: Build and Publish
       run: |
         docker build backend --tag ${{ env.IMAGE_NAME }}
-        docker save ${{ env.IMAGE_NAME }} | ssh -C ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker load && cd ${{ secrets.WORKDIR }} && docker-compose up -d && exit" 
+        docker save ${{ env.IMAGE_NAME }} | ssh -C ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker load && cd ${{ secrets.WORKDIR }} && GIT_COMMIT=$GITHUB_SHA docker-compose up -d && exit" 
     - name: cleanup
       run: rm -rf ~/.ssh
 
