update: about page

--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -21,10 +21,12 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "next": "14.0.4",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.50.1",
+    "react-intersection-observer": "^9.8.1",
     "react-use": "^17.5.0",
     "the-new-css-reset": "^1.11.2",
     "viem": "^2.7.8",
