--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "gen:wagmi": "wagmi generate --config ./wagmi.config.ts",
-    "gen:api": "openapi-generator-cli generate -i ./schemas/openapi.yaml -g typescript-axios -o ./generated/api"
+    "gen:api": "openapi-generator-cli generate -i ./schemas/openapi.yaml -g typescript-axios -o ./generated/api",
+    "gen:zodios": "openapi-zod-client ./schemas/openapi.yaml --output ./generated/zodios.ts"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
@@ -35,7 +36,6 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -48,6 +48,7 @@
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "openapi-zod-client": "^1.16.2",
     "pino-pretty": "^10.3.1",
     "postcss": "^8",
     "prettier": "3.0.3",
