Removed github actor

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/promoshockapi:$GITHUB_SHA
+  IMAGE_NAME: promoshockapi:$GITHUB_SHA
 
 jobs:
   publish:
