--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -14,12 +14,14 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@pinata/sdk": "^2.1.0",
+    "@react-input/mask": "^1.0.21",
     "@tanstack/react-query": "^5.14.6",
     "@web3modal/wagmi": "^4.0.10",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "imask": "^7.5.0",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
