--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "imask": "^7.5.0",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.6",
