--- a/promo-shock/package.json
+++ b/promo-shock/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@pinata/sdk": "^2.1.0",
     "@react-input/mask": "^1.0.21",
+    "@sodefa/next-server-context": "^0.0.2",
     "@tanstack/react-query": "^5.14.6",
     "@web3modal/wagmi": "^4.0.10",
     "antd": "^5.14.0",
